[gd_scene load_steps=7 format=2]

[ext_resource path="res://components/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://main/screens/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://components/MenuFrog.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/backgrounds/coo-sky-grad-640-400.png" type="Texture" id=5]
[ext_resource path="res://assets/blue_button_theme.tres" type="Theme" id=6]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_bottom = 24.0
texture = ExtResource( 5 )
stretch_mode = 1

[node name="MenuFrog" parent="." instance=ExtResource( 4 )]
position = Vector2( 318, 172 )
scale = Vector2( 6, 6 )

[node name="Title" parent="." instance=ExtResource( 1 )]
position = Vector2( 310, 82 )
scale = Vector2( 5.5, 5.5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -68.0
margin_bottom = -18.0
rect_min_size = Vector2( 0, 50 )
custom_constants/separation = 35
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 97.0
margin_right = 222.0
margin_bottom = 51.0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer2"]
margin_right = 125.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="LocalButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 14.0
margin_right = 125.0
margin_bottom = 51.0
rect_min_size = Vector2( 125, 0 )
theme = ExtResource( 6 )
text = "Local"

[node name="PlayOnlineButton" type="Button" parent="HBoxContainer"]
margin_left = 257.0
margin_right = 382.0
margin_bottom = 51.0
rect_min_size = Vector2( 125, 0 )
text = "Play!"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 417.0
margin_right = 542.0
margin_bottom = 51.0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 125.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="CreditsButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 125.0
margin_bottom = 51.0
rect_min_size = Vector2( 125, 0 )
theme = ExtResource( 6 )
text = "Credits"

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayOnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
